; ModuleID = '/home/carl/AnghaBench/borg/src/borg/algorithms/zstd/lib/legacy/extr_zstd_v07.c_HUFv07_decompress4X2_DCtx.c'
source_filename = "/home/carl/AnghaBench/borg/src/borg/algorithms/zstd/lib/legacy/extr_zstd_v07.c_HUFv07_decompress4X2_DCtx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@srcSize_wrong = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @HUFv07_decompress4X2_DCtx(i32* %0, i8* %1, i64 %2, i8* %3, i64 %4) #0 {
  %6 = alloca i64, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i64, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i64, align 8
  store i32* %0, i32** %7, align 8
  store i8* %1, i8** %8, align 8
  store i64 %2, i64* %9, align 8
  store i8* %3, i8** %10, align 8
  store i64 %4, i64* %11, align 8
  %14 = load i8*, i8** %10, align 8
  %15 = bitcast i8* %14 to i32*
  store i32* %15, i32** %12, align 8
  %16 = load i32*, i32** %7, align 8
  %17 = load i8*, i8** %10, align 8
  %18 = load i64, i64* %11, align 8
  %19 = call i64 @HUFv07_readDTableX2(i32* %16, i8* %17, i64 %18)
  store i64 %19, i64* %13, align 8
  %20 = load i64, i64* %13, align 8
  %21 = call i64 @HUFv07_isError(i64 %20)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %25

23:                                               ; preds = %5
  %24 = load i64, i64* %13, align 8
  store i64 %24, i64* %6, align 8
  br label %45

25:                                               ; preds = %5
  %26 = load i64, i64* %13, align 8
  %27 = load i64, i64* %11, align 8
  %28 = icmp uge i64 %26, %27
  br i1 %28, label %29, label %32

29:                                               ; preds = %25
  %30 = load i32, i32* @srcSize_wrong, align 4
  %31 = call i64 @ERROR(i32 %30)
  store i64 %31, i64* %6, align 8
  br label %45

32:                                               ; preds = %25
  %33 = load i64, i64* %13, align 8
  %34 = load i32*, i32** %12, align 8
  %35 = getelementptr inbounds i32, i32* %34, i64 %33
  store i32* %35, i32** %12, align 8
  %36 = load i64, i64* %13, align 8
  %37 = load i64, i64* %11, align 8
  %38 = sub i64 %37, %36
  store i64 %38, i64* %11, align 8
  %39 = load i8*, i8** %8, align 8
  %40 = load i64, i64* %9, align 8
  %41 = load i32*, i32** %12, align 8
  %42 = load i64, i64* %11, align 8
  %43 = load i32*, i32** %7, align 8
  %44 = call i64 @HUFv07_decompress4X2_usingDTable_internal(i8* %39, i64 %40, i32* %41, i64 %42, i32* %43)
  store i64 %44, i64* %6, align 8
  br label %45

45:                                               ; preds = %32, %29, %23
  %46 = load i64, i64* %6, align 8
  ret i64 %46
}

declare dso_local i64 @HUFv07_readDTableX2(i32*, i8*, i64) #1

declare dso_local i64 @HUFv07_isError(i64) #1

declare dso_local i64 @ERROR(i32) #1

declare dso_local i64 @HUFv07_decompress4X2_usingDTable_internal(i8*, i64, i32*, i64, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
